# rust-discord-music-bot

./: .gitignore  Cargo.toml  application.yml
.github/workflows/: deploy.yml
src/: commands.rs  handler.rs  main.rs  music_events.rs  utils.rs  weather.rs
src/commands/: clear.rs  help.rs  join.rs  leave.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  shuffle.rs  skip.rs  stop.rs
