[package]
name = "жопа"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2.5"
tokio = { version= "1.28.0", features= ["macros", "rt-multi-thread", "signal"] }
serenity = { version = "0.11.5", features = ["client", "voice", "rustls_backend", "standard_framework", "model"] }
songbird = { version = "0.3.2", features = ["builtin-queue"] }
dotenv = "0.15.0"
rand = "0.8.5"
