[package]
name = "жопа"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2.5"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
serenity = { features = ["cache", "utils", "framework", "standard_framework", "voice", "http", "rustls_backend"], version = "0.12" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
songbird = { version = "0.4", features = ["builtin-queue", "driver"] }
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = "0.11.24"
strum = { version = "0.26.1", features = ["derive"] }
